<resources>
<string name="app_name">TaxMaster</string>
<!-- Strings related to login -->
<string name="prompt_email">Email</string>
<string name="prompt_password">Password</string>
<string name="prompt_passcode">Passcode</string>
<string name="prompt_password_reenter">Confirm Password</string>
<string name="prompt_passcode_reenter">Confirm Passcode</string>
<string name="prompt_new_passcode_reenter">Confirm new Passcode</string>
<string name="prompt_new_passcode_enter">Enter new Passcode</string>
<string name="action_sign_in">Sign in or register</string>
<string name="action_register">Register</string>
<string name="action_sign_in_short">Sign in</string>
<string name="action_sign_up">Sign up</string>
<string name="enter_name">Name</string>
<string name="enter_lastname">Surname</string>
<string name="delete">Delete member</string>
<string name="dashValue" />
<string name="next">Next</string>
<string name="cofig">CONFIGURE DEVICE</string>
<string name="number_indie">40</string>
<string name="number_corp">2</string>
<string name="Add">Add</string>
<string name="Continue">Continue</string>
<string name="Later">Later</string>
<string name="Plus">Press the + button to add a new member</string>
<string name="cancel">Cancel</string>
<string name="ok">Ok</string>
<string name="dialog_add_member">Enter a new team member</string>
<string name="indie">INDIVIDUAL TAXPAYERS</string>
<string name="corp">CORPORATES</string>
<string name="finish">Finish</string>
<string name="other_name">Other names</string>
<string name="maiden_lastname">Maiden name</string>
<string name="error_invalid_email">This email address is invalid</string>
<string name="error_invalid_password">This password is too short</string>
<string name="error_incorrect_password">This password is incorrect</string>
<string name="error_field_required">This field is required</string>
<string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
<string name="title_activity_main">MainActivity</string>
<string name="title_activity_soft">SoftTax</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>

<string name="security_question">Security question</string>
<string name="answer">Answer</string>
<string name="BVN">BVN</string>
<string name="save">SAVE TO DEVICE</string>
<string name="team">Register team</string>
<string name="occupation">Occupation</string>
<string name="profession">Profession</string>
<string name="TIN">TIN</string>
<string name="NIN">National ID No.</string>
<string name="PTO">Preferred Tax office</string>
<string name="phone">Phone No.</string>
<string name="con_address">Address</string>
<string name="city">City</string>
<string name="s.o.r">State of residence</string>
<string name="nationality">Nationality</string>
<string name="s.o.o">State of origin</string>


<string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>

<string name="customer_prompt">Select customer type</string>

<string name="year_prompt">Select Year</string>
<string name="TaxType_prompt">Select Tax Type</string>
<string name="TaxItem_prompt">Select Tax Item</string>

<string-array name="year_arrays">
    <item>-- select a year --</item>
    <item>2000</item>
    <item>2001</item>
    <item>2002</item>
    <item>2003</item>
    <item>2004</item>
    <item>2005</item>
    <item>2006</item>
    <item>2007</item>
    <item>2008</item>
    <item>2009</item>
    <item>2010</item>
    <item>2011</item>
    <item>2012</item>
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
</string-array>

<string-array name="customer_arrays">
    <item>-- select a type --</item>
    <item>Individual</item>
    <item>Corporate</item>
</string-array>

<string-array name="title_arrays">
    <item>-- title --</item>
    <item>Dr</item>
    <item>Mr</item>
    <item>Mrs</item>
    <item>Miss</item>
    <item>Chief</item>
</string-array>

<string-array name="gender_arrays">
    <item>-- gender --</item>
    <item>Male</item>
    <item>Female</item>
</string-array>

<string-array name="marital_arrays">
    <item>-- select marital status --</item>
    <item>Married</item>
    <item>Single</item>
</string-array>

<string-array name="pto_arrays">
    <item>-- select preferred office --</item>
    <item>Oshodi 1</item>
    <item>Surulere 1</item>
    <item>Auchi</item>
    <item>Agenebode</item>
</string-array>

<string-array name="state_arrays">
    <item>-- select a state --</item>
    <item>Lagos</item>
    <item>Delta</item>
    <item>Plateau</item>
    <item>Abuja</item>
</string-array>

<string-array name="nation_arrays">
    <item>-- select a country --</item>
    <item>Nigeria</item>
    <item>Algeria</item>
    <item>UK</item>
    <item>USA</item>
    <item>Canada</item>
    <item>Australia</item>
</string-array>

<string name="new_pass">Enter a new passcode to be used for future login.</string>
<string name="title_activity_configure_team">ConfigureTeam</string>
<string name="title_activity_main2">Main2Activity</string>

<string name="title_activity_splash_screen">SplashScreen</string>
<string name="dummy_button">Dummy Button</string>
<string name="dummy_content">DUMMY\nCONTENT</string>
<string name="title_activity_dash_swipe">DashSwipe</string>
<string name="section_format">Hello World from section: %1$d</string>
<string name="title_activity_dash_board_swipe">DashBoardSwipe</string>
<string name="title_activity_reg_customer">RegCustomer</string>
    <string name="Save">Save</string>
    <string name="login_tip">Enter username and password used to register online.</string>
    <string name="forgot_code">Forgot passcode ?</string>
    <string name="signIN">Sign In</string>
    <string name="reg_single">Register single user</string>
    <string name="reg_team">Register team</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mStat">Marital Status</string>

</resources>

