<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config_individual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorTheme"
    tools:context="synergy.eclectic.com.taxmaster.ChangePasscode"
    android:weightSum="1">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/logo">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_gravity="center"
        android:background="@drawable/curvedtop">

        <TextView
            android:id="@+id/newPassChange"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_pass"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/otherside">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/old_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_passcode"
                android:inputType="numberPassword"
                android:textColor="@color/black"
                android:background="@android:color/background_light"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                />

            <EditText
                android:id="@+id/new_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_passcode_enter"
                android:inputType="numberPassword"
                android:textColor="@color/black"
                android:background="@android:color/background_light"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                />

            <EditText
                android:id="@+id/connew_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_passcode_reenter"
                android:inputType="numberPassword"
                android:textColor="@color/black"
                android:background="@android:color/background_light"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Passcode must contain at least 5 digits"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/PapayaWhip"/>

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:theme="@style/AppTheme.Button"
                    android:id="@+id/save_pass_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/Save"
                    android:onClick="onClick"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </android.support.v7.widget.ButtonBarLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>

