<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config_individual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorTheme"
    tools:context="synergy.eclectic.com.taxmaster.ConfigurationActivity"
    android:weightSum="1">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logo"
        android:layout_weight="0.50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:background="@drawable/curvedtop">

        <TextView
            android:id="@+id/act"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_tip"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/otherside">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="274dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/config_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/emailp"
                android:drawablePadding="16dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/config_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/background_light"
                android:drawableStart="@drawable/lockers"
                android:drawablePadding="16dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black" />

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/con_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:padding="14dp"
                    android:text="Configure"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:theme="@style/AppTheme.Button" />

            </android.support.v7.widget.ButtonBarLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
